old examples removed

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Drools Developer Cookbook Examples
-==================================
+Drools Developer's Cookbook Examples
+====================================
 
-In this project you will found the examples of the Drools Developer Cookbook
+In this repository you will find the examples of the Drools Developer's Cookbook
+
+<http://www.packtpub.com/drools-developers-using-jboss-cookbook/book>
